Phase_2/test/test_12111624_3.spl
int foo1(){
    return 1;
    foo1();
}

int foo2(){
    foo1();
    foo2(1,2);
}

int main(){
    foo2(a);
}